--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -7,10 +7,11 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ACHTUNG】</color> -    Großer Download",
         "ABOUT": "ÜBER",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastruktur und Appaufbau\nNitro4CSR - Daten-Management und Integration von Community-Daten\nFREYCKSSON - Datenaktualisierung\nMAINTAINERS - erstellen und aktualisieren von Community-Daten\n\nPublisher: ムRimgine Entertainment",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technische Infos)",
+        "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "Die besten Zeiten von Fahrern findest du hier",
         "And finally, click to see additional information about the car": "Zum Abschluss, tippe hier für Zusatzinformationen über ein Auto",
         "Avatar": "Avatar",
@@ -93,11 +94,13 @@
         "This is the podium, the best cars and drivers show off here": "Das ist das Podium, die besten Autos und Fahrer protzen hier.",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Dieses Tool wurde zum sammeln und kombinieren von Informationen erstellt!\n\nFast alle Inhalte sind aus CSR2 und gehören NaturalMotion => Zynga => Take-Two Interactive. Die genutzten Inhalte werden nur zum Anzeigen von Informationen der Community genutzt und sonst nichts.",
         "Time": "Zeit",
+        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
         "Total needed:": "Insgesammt gebraucht:",
         "UNRESTORED": "UNRESTAURIERT",
         "UPGRADE DETAILED INFO": "DETAILIERTE VERBESSERUNGSINFOS",
         "Updating the database...": "Datenbank aktualisieren...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Sehr Niedrig|Niedrig|Medium|Hoch|Sehr High|Ultra",
+        "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "WELTREKORDE",
         "WR CAR RATING": "WR AUTO BEWERTUNG",
         "You can add important cars to favorites": "Die kannt dir wichtige Autos als Favorit markieren",
