--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -7,10 +7,11 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
         "ABOUT": "ACERCA",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
+        "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "¡Las mejores carreras de los corredores están aquí! ¡Veamos este salón de la fama!",
         "And finally, click to see additional information about the car": "Y por último, haz clic para ver información adicional sobre el auto.",
         "Avatar": "Avatar",
@@ -93,11 +94,13 @@
         "This is the podium, the best cars and drivers show off here": "Este es el podio, los mejores autos y pilotos se lucen aquí",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "¡Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.",
         "Time": "Tiempo",
+        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
         "Total needed:": "Total necesario:",
         "UNRESTORED": "SIN RESTAURAR",
         "UPGRADE DETAILED INFO": "INFORMACIÓN DETALLADA DE LA ACTUALIZACIÓN",
         "Updating the database...": "Actualización de la base de datos...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "RÉCORDS MUNDIALES",
         "WR CAR RATING": "WR CLASIFICACIÓN DEL AUTO",
         "You can add important cars to favorites": "Puedes agregar autos importantes a tus favoritos",
