--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -7,10 +7,11 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ОСТОРОЖНО】</color> -    ПОТОКОВАЯ ЗАГРУЗКА",
         "ABOUT": "О ПРОЕКТЕ",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment\n\nПо всем вопросам: csr2hub.service@gmail.com",
         "AUDIO": "АУДИО",
         "AUTOSHOW": "АВТОШОУ",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
+        "Agree": "Согласен",
         "All the best races of the racers are here! Let's see this hall of fame": "Все лучшие результаты гонщиков находятся здесь! Давай посмотрим на этот зал славы",
         "And finally, click to see additional information about the car": "Нажми сюда, чтобы увидеть дополнительную информацию об автомобиле",
         "Avatar": "Аватар",
@@ -93,11 +94,13 @@
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
         "Time": "Время",
+        "To continue using the application you must agree to the terms the user agreement": "Чтобы продолжить пользоваться приложением вам нужно принять условия пользовательского соглашения",
         "Total needed:": "Всего необходимо:",
         "UNRESTORED": "НЕВОССТАНОВЛЕННЫЙ",
         "UPGRADE DETAILED INFO": "ДЕТАЛЬНАЯ ИНФОРМАЦИЯ ОБ УЛУЧШЕНИЯХ",
         "Updating the database...": "Обновление базы данных...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Очень низкое|Низкое|Среднее|Высокое|Очень высокое|Ультра",
+        "WELCOME!": "ДОБРО ПОЖАЛОВАТЬ!",
         "WORLD RECORDS": "МИРОВЫЕ РЕКОРДЫ",
         "WR CAR RATING": "МИРОВОЙ РЕЙТИНГ",
         "You can add important cars to favorites": "Можно добавлять важные автомобили в избранное",
