--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -7,10 +7,11 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下載量大",
         "ABOUT": "關于",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "AUDIO": "音響",
         "AUTOSHOW": "車展",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
+        "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "車手們的最佳賽事都在這裏! 讓我們看看這個名人堂",
         "And finally, click to see additional information about the car": "最後，點擊查看車輛的額外資訊",
         "Avatar": "頭像",
@@ -93,11 +94,13 @@
         "This is the podium, the best cars and drivers show off here": "這裏是頒獎臺，最佳的車輛和車手都展示在這裏",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "這個計劃是爲了自動化和整頓整個游戲的必要資訊到一個集中點開發的!\n\n幾乎所有應用的資源皆爲 CSR2 所屬，且是 NaturalMotion => Zynga => Take-Two Interactive 的財產。 所使用的資源只用於給社群提供參考資訊，無其他用途",
         "Time": "時間",
+        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
         "Total needed:": "總需:",
         "UNRESTORED": "未修復",
         "UPGRADE DETAILED INFO": "升級詳細資訊",
         "Updating the database...": "正在更新數據庫...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "世界紀錄",
         "WR CAR RATING": "世界紀錄的車輛積分",
         "You can add important cars to favorites": "你可以把重要的車輛加入最愛裏",
