--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -7,10 +7,11 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下载量大",
         "ABOUT": "关于",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "AUDIO": "音响",
         "AUTOSHOW": "车展",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "车展 <color=#FFD540>PRO</color> 模式  (technical info)",
+        "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "车手们的最佳赛事都在这里! 让我们看看这个名人堂",
         "And finally, click to see additional information about the car": "最后，点击查看车辆的额外资讯",
         "Avatar": "头像",
@@ -93,11 +94,13 @@
         "This is the podium, the best cars and drivers show off here": "这里是颁奖台，最佳的车辆和车手都展示在这里",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "这个计划是为了自动化和整顿整个游戏的必要资讯到一个集中点开发的!\n\n几乎所有应用的资源皆为 CSR2 所属，且是 NaturalMotion => Zynga => Take-Two Interactive 的财产。所使用的资源只用于给社群提供参考资讯，无其他用途。",
         "Time": "时间",
+        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
         "Total needed:": "总需:",
         "UNRESTORED": "未修复",
         "UPGRADE DETAILED INFO": "升级详细资讯",
         "Updating the database...": "正在更新数据库...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "世界纪录",
         "WR CAR RATING": "世界纪录的车辆积分",
         "You can add important cars to favorites": "你可以把重要的车辆加入最爱里",
