--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -7,10 +7,11 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
         "ABOUT": "ABOUT",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
+        "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
         "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
         "Avatar": "Avatar",
@@ -93,11 +94,13 @@
         "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.",
         "Time": "Time",
+        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
         "Total needed:": "Total needed:",
         "UNRESTORED": "UNRESTORED",
         "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
         "Updating the database...": "Updating the database...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "WORLD RECORDS",
         "WR CAR RATING": "WR CAR RATING",
         "You can add important cars to favorites": "You can add important cars to favorites",
