--- a/Localisation/KO.json
+++ b/Localisation/KO.json
@@ -1,115 +1,115 @@
 {
     "TranslationsData": {
-        " (elite max)": " (elite max)",
-        " (unrestored)": " (unrestored)",
-        " records": " records",
-        " sec": " sec",
+        " (elite max)": " (최대 엘리트)",
+        " (unrestored)": " (복원되지 않음)",
+        " records": " 기록",
+        " sec": " 초",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
-        "ABOUT": "ABOUT",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
-        "AUDIO": "AUDIO",
-        "AUTOSHOW": "AUTOSHOW",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
-        "Agree": "Agree",
-        "All the best races of the racers are here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
-        "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
-        "Avatar": "Avatar",
-        "BACK": "BACK",
-        "BEST DRIVER!": "BEST DRIVER!",
-        "BEST:": "BEST:",
-        "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating of the tier": "Basic specs and the car rating at the tier",
-        "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
-        "Boss time: ": "Boss time: ",
-        "CAR INFO (from Vision spreadsheet)": "CAR INFO (vision)",
-        "CONFIRM CHANGES": "CONFIRM CHANGES",
-        "CONNECTION FAILED": "CONNECTION FAILED",
-        "CREATORS": "CREATORS",
-        "CREDITS": "CREDITS",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "Car name": "Car name",
-        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Check out the cost of each part, as well as the effects of the sixth parts!",
-        "City camera speed": "City camera speed",
-        "Click here to change the leaderboard!": "Click here to change the leaderboard!",
-        "Click to change car type!": "Click to change car type!",
-        "DYNO:": "DYNO:",
-        "Download failed, check your internet connection and restart the app": "Failed download, check internet connection and restart app",
-        "Driver": "Driver",
-        "ELITE MAX": "ELITE MAX",
-        "ELITE STOCK": "ELITE STOCK",
-        "EXIT": "EXIT",
-        "Effects volume": "Effects volume",
-        "Enable localisation": "Enable localisation",
-        "FAVORITEs": "FAVORITEs",
-        "FINAL DRIVE": "FINAL DRIVE",
-        "FPS limiter": "FPS limiter",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
-        "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "GRAPHICS": "GRAPHICS",
-        "Gacha imports": "Gacha imports",
-        "Get update!": "Get update!",
-        "Get updated information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
-        "Graphics quality": "Graphics quality",
-        "I know it already": "I already know",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
-        "Initializing database...": "Initializing the database...",
-        "LOADING SCREEN": "LOADING SCREEN",
-        "Let's choose the unrestored version": "Let's choose the unrestored version",
-        "Let's go!": "Let's go!",
-        "Let's look at LEGENDS": "Let's look at LEGENDS",
-        "Let's look at this car": "Let's look at this car",
-        "MILESTONE SEASON CAR": "MILESTONE SEASON CAR",
-        "Music clip": "Music clip",
-        "Music volume": "Music volume",
-        "NEW": "NEW",
-        "NITROUS OXIDE": "NITROUS OXIDE",
-        "Number of upgrades and fusion parts": "Number of upgrades and fusion parts",
-        "OFF": "OFF",
-        "ON": "ON",
-        "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHERS": "OTHERS",
-        "Petrol or electric car": "Petrol or electric car",
-        "Preparing the city...": "Preparing the city...",
-        "Price of full car upgrades": "Price of full car upgrades",
-        "Price of the car:": "Price of the car:",
-        "Quit": "Quit",
-        "RARE IMPORTS": "RARE IMPORTS",
-        "RELEASE iNFO": "RELEASE iNFO",
-        "Rarity": "Rarity",
-        "Records": "Records",
-        "Reset": "Reset",
-        "Restart": "Restart",
-        "SEASON CARS": "SEASON CARS",
-        "SETTINGS": "SETTINGS",
-        "Save": "Save",
-        "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
-        "Start": "Start",
-        "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally an AUTOSHOW in the city, let me show you around?": "There's finally an AUTOSHOW in city, let me show you around?",
-        "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
-        "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car is a part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "This is the AUTOSHOW - information about all the cars are collected here! Let's see",
-        "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.",
-        "Time": "Time",
-        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
-        "Total needed:": "Total needed:",
-        "UNRESTORED": "UNRESTORED",
-        "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
-        "Updating the database...": "Updating the database...",
-        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
-        "WELCOME!": "WELCOME!",
-        "WORLD RECORDS": "WORLD RECORDS",
-        "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to favorites": "You can add important cars to favorites",
-        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "You can find the car you need by manufacturers or car groups. There is even a favorites section!",
-        "You can go straight to the AUTOSHOW, just click on the car!": "You can go straight to the AUTOSHOW, just click on the car!",
-        "You can mark the cars you owned": "You can mark the cars you owned",
-        "You can see the best tuning settings here": "Here you can see the best tuning settings",
-        "You can see the visual specs here": "You can see the visual specs here",
-        "You could have won this car in the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "text coming soon...": "text coming soon..."
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【주의】</color> -    큰 다운로드 크기",
+        "ABOUT": "정보",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\nICE_PeAcE CHARGRR\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - 인프라 및 빌드 애플리케이션\nNitro4CSR - 리소스 관리 및 통합 커뮤니티 데이터\nFREYCKSSON - 리소스 업데이트\n유지 관리자 - 커뮤니티 데이터 생성 및 업데이트\nICE_PeAcE CHARGRR\n출판사: ムRimgine 엔터테인먼트\n\n이메일 연락처: csr2hub.service@gmail.com",
+        "AUDIO": "오디오",
+        "AUTOSHOW": "오토쇼",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "오토쇼 <color=#FFD540>PRO</color> 모드  (기술 정보)",
+        "Agree": "동의",
+        "All the best races of the racers are here! Let's see this hall of fame": "모든 최고 레이스가 여기에 있습니다! 명예의 전당 확인하기",
+        "And finally, click to see additional information about the car": "마지막으로, 자동차에 대한 추가 정보를 보려면 클릭하세요.",
+        "Avatar": "아바타",
+        "BACK": "뒤로",
+        "BEST DRIVER!": "상위 운전자!",
+        "BEST:": "최고:",
+        "BOSS CAR": "보스 자동차",
+        "Basic specs and the car rating of the tier": "기본 사양 및 자동차 티어 등급",
+        "Best result and racer. Click to watch the best shift video!": "최고 기록과 레이서. 클릭하여 기록 확인하기!",
+        "Boss time: ": "보스 시간: ",
+        "CAR INFO (from Vision spreadsheet)": "자동차 정보 (비전 스프레드시트)",
+        "CONFIRM CHANGES": "변경 사항 확인",
+        "CONNECTION FAILED": "연결 끊김",
+        "CREATORS": "제작자",
+        "CREDITS": "출처",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>허브는 데이터를 다운로드해야 합니다.: <color= #FFAA0D>{0}</color>, 제한된 인터넷을 사용하지 않는지 확인 후 다운로드를 확인해 주세요.",
+        "Car name": "자동차 이름",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "각 부품의 수치와, 6단계 부품의 효과를 확인하세요.",
+        "City camera speed": "도시 카메라 속도",
+        "Click here to change the leaderboard!": "이곳을 클릭하여 순위표를 변경하세요!",
+        "Click to change car type!": "차종을 변경하려면 클릭하세요!",
+        "DYNO:": "다이노:",
+        "Download failed, check your internet connection and restart the app": "다운로드에 실패하였습니다, 인터넷 연결을 확인하고 앱을 재시작하세요.",
+        "Driver": "운전자",
+        "ELITE MAX": "최대 엘리트",
+        "ELITE STOCK": "순정 엘리트",
+        "EXIT": "나가기",
+        "Effects volume": "효과 볼륨",
+        "Enable localisation": "현지화 활성화",
+        "FAVORITEs": "즐겨찾기",
+        "FINAL DRIVE": "파이널 드라이브",
+        "FPS limiter": "FPS 제한",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "드디어 가장 빠른 플레이어들과 그들의 자동차를 볼 수 있습니다. 저와 함께 가시죠, 제가 보여드리겠습니다!",
+        "Find out how many elite components you need to fully upgrade your car!": "자동차를 완전히 업그레이드 하기 위해 필요한 몇 가지 엘리트 구성 요소를 알아보세요!",
+        "GRAPHICS": "그래픽",
+        "Gacha imports": "가차 수집",
+        "Get update!": "업데이트 하기!",
+        "Get updated information on how many Legends components you need to restore your car!": "자동차 복원에 필요한 레전드 컴포넌트 수에 대한 최신 정보를 확인하세요!",
+        "Graphics quality": "그래픽 품질",
+        "I know it already": "이미 알고 있는 것",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "올바른 작업을 위해 추가 데이터를 다운로드해야 합니다. 인터넷 연결을 확인한 후 다시 시도해 주세요.",
+        "Initializing database...": "데이터베이스 초기화 중...",
+        "LOADING SCREEN": "로딩 화면",
+        "Let's choose the unrestored version": "저장되지 않은 버전 선택하기",
+        "Let's go!": "출발!",
+        "Let's look at LEGENDS": "레전드 살펴보기",
+        "Let's look at this car": "현재 자동차 살펴보기",
+        "MILESTONE SEASON CAR": "마일스톤 시즌 자동차",
+        "Music clip": "음악 클립",
+        "Music volume": "음악 볼륨",
+        "NEW": "새로운",
+        "NITROUS OXIDE": "아산화질소",
+        "Number of upgrades and fusion parts": "업그레이드 및 퓨전 부품 수",
+        "OFF": "끄기",
+        "ON": "켜기",
+        "OPEN CONFIGURATOR": "개방형 구성기",
+        "OTHERS": "다른 것들",
+        "Petrol or electric car": "내연기관 또는 전기 자동차",
+        "Preparing the city...": "도시 준비중...",
+        "Price of full car upgrades": "자동차 업그레이드 총 비용",
+        "Price of the car:": "차량 가격:",
+        "Quit": "중지",
+        "RARE IMPORTS": "희귀한 수집 부품",
+        "RELEASE iNFO": "정보 공개",
+        "Rarity": "희귀도",
+        "Records": "기록",
+        "Reset": "리셋",
+        "Restart": "재시작",
+        "SEASON CARS": "시즌 자동차",
+        "SETTINGS": "설정",
+        "Save": "저장",
+        "Some settings have been changed, save changes?": "일부 설정이 변경되었습니다. 변경 사항을 저장하시겠습니까?",
+        "Start": "시작",
+        "TIRE PRESSURE": "타이어 압력",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "드디어 도시에 오토쇼가 열렸습니다. 안내해 드릴까요?",
+        "This car can be obtained by defeating the boss": "이 자동차는 보스를 상대로 이겨 얻을 수 있습니다.",
+        "This car cannot be obtained anywhere": "이 자동차는 구할 수 없습니다.",
+        "This car is a part of a collection and can be purchased with collection credits.": "이 자동차는 컬렉션 자동차로, 컬렉션 크레딧으로 구매할 수 있습니다.",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "이것이 바로 오토쇼입니다 - 모든 차량에 대한 정보가 이곳에 수집됩니다! 확인해볼까요.",
+        "This is the podium, the best cars and drivers show off here": "이곳은 최고의 자동차와 운전자들의 시상대입니다.",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "이 프로젝트는 게임에 필요한 정보를 한 곳에서 자동화하고 수집하기 위해 만들어졌습니다!\n\n애플리케이션의 거의 모든 리소스는 게임 CSR2에 속하며 NaturalMotion => Zynga => Take-Two Interactive의 속성입니다. 사용되는 리소스는 커뮤니티의 참조 정보만 표시하고 그 이상은 표시하지 않습니다.",
+        "Time": "시간",
+        "To continue using the application you must agree to the terms the user agreement": "앱을 계속 사용하려면 사용자 조건에 동의해야 합니다.",
+        "Total needed:": "총 필요량:",
+        "UNRESTORED": "저장되지 않음",
+        "UPGRADE DETAILED INFO": "업그레이드 상세 정보",
+        "Updating the database...": "데이터베이스 업데이트 중...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "매우 낮음|낮음|보통|높음|매우 높음|울트라",
+        "WELCOME!": "어서오세요!",
+        "WORLD RECORDS": "세계 기록",
+        "WR CAR RATING": "자동차 세계 기록 등급",
+        "You can add important cars to favorites": "중요한 자동차를 즐겨찾기에 추가할 수 있습니다.",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "자동차 제조업체 그룹에서 필요한 자동차를 찾을 수 있습니다. 당신이 즐겨찾기한 자동차를 위한 섹션도 있습니다.",
+        "You can go straight to the AUTOSHOW, just click on the car!": "자동차를 클릭하여 오토쇼로 바로 이동하세요!",
+        "You can mark the cars you owned": "당신이 소유한 자동차에 표시할 수 있습니다.",
+        "You can see the best tuning settings here": "여기에서 최고 튜닝 설정값을 확인하세요.",
+        "You can see the visual specs here": "여기에서 시각적 사양을 확인하세요. ",
+        "You could have won this car in the following seasons:": "이 자동차는 시즌 팀 챔피언쉽에서 획득할 수 있습니다.:",
+        "text coming soon...": "텍스트 업데이트 예정..."
     }
 }
