--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -5,13 +5,13 @@
         " records": " Rekorde",
         " sec": " s",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ACHTUNG】</color> -    Großer Download",
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ACHTUNG】</color> -    GROßER DOWNLOAD",
         "ABOUT": "ÜBER",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration of community data\nFREYCKSSON - Resource updating\nTHEMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktur und App-Entwicklung\nNitro4CSR - Management und Integration von Community Daten\nFREYCKSSON - Resourcen aktualisieren\nTHEMAINTAINERS - Erstellung und Instandhaltung von Community Datan\n\nPublisher: ムRimgine Entertainment\n\nKontakt E-Mail: csr2hub.service@gmail.com",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technische Infos)",
-        "Agree": "Agree",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> Modus  (technische Infos)",
+        "Agree": "Akzeptieren",
         "All the best races of the racers are here! Let's see this hall of fame": "Die besten Zeiten von Fahrern findest du hier",
         "And finally, click to see additional information about the car": "Zum Abschluss, tippe hier für Zusatzinformationen über ein Auto",
         "Avatar": "Avatar",
@@ -23,16 +23,16 @@
         "Best result and racer. Click to watch the best shift video!": "Beste Zeit und der Fahrer. Tippe zum aufrufen des Videos mit Schaltanweisungen.",
         "Boss time: ": "Boss Zeit: ",
         "CAR INFO (from Vision spreadsheet)": "AUTO INFO (Project Vision)",
-        "CONFIRM CHANGES": "ÄNDERUNGEN BESTÄTIGEN",
+        "CONFIRM CHANGES": "ÄNDERUNGEN SPEICHERN",
         "CONNECTION FAILED": "VERBINDUNG FEHLGESCHLAGEN",
         "CREATORS": "ERSTELLER",
         "CREDITS": "CREDITS",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB muss Daten herunterladen: <color= #FFAA0D>{0}</color>, bitte nutze einen Internetzugang ohne Datenbegrenzung.",
-        "Car name": "Modell",
+        "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB muss Daten herunterladen: <color= #FFAA0D>{0}</color>, bitte nutze einen Internetzugang ohne Datenbegrenzung.",
+        "Car name": "Modellname",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Hier findest du die Preise für Verbesserungen und wie gut alle Stufe 6 Teile sind",
         "City camera speed": "Geschwindigkeit der Stadtkamera ",
         "Click here to change the leaderboard!": "Tippe hier, um die Rangliste zu wechseln",
-        "Click to change car type!": "Tippe hier um den Autotyp zu wechseln.",
+        "Click to change the car type!": "Tippe hier um den Autotyp zu wechseln.",
         "DYNO:": "PRÜFSTAND:",
         "Download failed, check your internet connection and restart the app": "Download fehlgeschlagen, prüfe deine Internetverbindung und starte die App neu",
         "Driver": "Fahrer",
@@ -45,14 +45,14 @@
         "FINAL DRIVE": "ENDÜBERSETZUNG",
         "FPS limiter": "FPS Limit",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Zum Abschluss lass mich dir die schnellsten Fahrer und deren Fahrzeuge zeigen. Komm!",
-        "Find out how many elite components you need to fully upgrade your car!": "Hier siehst du wie viele Elite Teile du brauchst um das auto maximal aufzubauen",
+        "Find out how many elite components you need to fully upgrade your car!": "Hier siehst du wie viele Elite Teile du brauchst um das Auto maximal aufzubauen",
         "GRAPHICS": "GRAFIK",
         "Gacha imports": "Seltene Importe",
         "Get update!": "Update laden!",
         "Get updated information on how many Legends components you need to restore your car!": "Erhalte aktuelle Infos, wie viele Legenden Komponenten du brauchst um dein Auto zu restaurieren!",
         "Graphics quality": "Grafikqualität",
         "I know it already": "Überspringen",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Um alle Funktionen der App nutzen zu können müssen zusätzliche Daten heruntergeladen werden. Bitte überprüfe deine Internetverbindung und versuche es erneut.",
+        "In order to ensure appropriate working, the app needs to download additional data, please check your internet connection and try again": "Um alle Funktionen der App nutzen zu können müssen zusätzliche Daten heruntergeladen werden. Bitte überprüfe deine Internetverbindung und versuche es erneut.",
         "Initializing database...": "Datenbank initialisieren...",
         "LOADING SCREEN": "LADEBILDSCHIRM",
         "Let's choose the unrestored version": "Lass uns die unrestaurierte Variante auswählen",
@@ -94,7 +94,7 @@
         "This is the podium, the best cars and drivers show off here": "Das ist das Podium, die besten Autos und Fahrer protzen hier.",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Dieses Tool wurde zum sammeln und kombinieren von Informationen erstellt!\n\nFast alle Inhalte sind aus CSR2 und gehören NaturalMotion => Zynga => Take-Two Interactive. Die genutzten Inhalte werden nur zum Anzeigen von Informationen der Community genutzt und sonst nichts.",
         "Time": "Zeit",
-        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
+        "To continue using the application you must agree to the user agreement terms.": "Um die app weiter nutzen zu können musst die die Nutzungsbedingungen akzeptieren.",
         "Total needed:": "Insgesammt gebraucht:",
         "UNRESTORED": "UNRESTAURIERT",
         "UPGRADE DETAILED INFO": "DETAILIERTE VERBESSERUNGSINFOS",
@@ -105,7 +105,7 @@
         "WR CAR RATING": "WR AUTO BEWERTUNG",
         "You can add important cars to favorites": "Die kannt dir wichtige Autos als Favorit markieren",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Du kannst Autos nach Marke oder nach Gruppe suchen. Es gibt sogar ein Favoriten-Bereich!",
-        "You can go straight to the AUTOSHOW, just click on the car!": "Dukannst direkt zur AUTOSHOW gehen, tippe einfach auf den Namen!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "Du kannst direkt zur AUTOSHOW gehen, tippe einfach auf den Namen!",
         "You can mark the cars you owned": "Du kannst Autos als in besitzt markieren",
         "You can see the best tuning settings here": "Hier siehst du die besten Tuning-Einstellungen",
         "You can see the visual specs here": "Hier kannst du auf Import-Varianten zugreifen",
